[tool.poetry]
name = "eida-statsman"
version = "0.4.0"
description = "Manage central EIDA statistics database. Create nodes, tokens, manage policies."
authors = ["Jonathan Schaeffer <jonathan.schaeffer@univ-grenoble-alpes.fr>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "eida_statsman"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.16"

[tool.poetry.scripts]
eida_statsman = "eida_statsman.eida_statsman:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
