[project]
name = "eida-statsman"
version = "0.4.0"
description = "Manage central EIDA statistics database. Create nodes, tokens, manage policies."
authors = [{ name = "Jonathan Schaeffer", email = "jonathan.schaeffer@univ-grenoble-alpes.fr" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.3,<9",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
eida_statsman = "eida_statsman.eida_statsman:cli"

[tool.uv]

[tool.uv.build-backend]
module-name = ["eida_statsman"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
